[package]
name = "mdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["cargo"] }
dirs = "5.0.1"
log = "0.4.17"
serde = "1.0.163"
serde_derive = "1.0.163"
shellexpand = "3.1.0"
toml = "0.7.3"
